RelationTypes/Many To Many/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTS</fullName>
                </value>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>FINANCE</fullName>
                </value>
                <value>
                    <fullName>GEOGRAPHY</fullName>
                </value>
                <value>
                    <fullName>HISTORY</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>MARKETING</fullName>
                </value>
                <value>
                    <fullName>MATH</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Year</fullName>
                </value>
                <value>
                    <fullName>Second Year</fullName>
                </value>
                <value>
                    <fullName>Third Year</fullName>
                </value>
                <value>
                    <fullName>Fourth Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exam Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarh</fullName>
                </value>
                <value>
                    <fullName>Gangtok</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Gujarat</fullName>
                </value>
                <value>
                    <fullName>Haryana</fullName>
                </value>
                <value>
                    <fullName>Himachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Jharkhand</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Manipur</fullName>
                </value>
                <value>
                    <fullName>Meghalaya</fullName>
                </value>
                <value>
                    <fullName>Mizoram</fullName>
                </value>
                <value>
                    <fullName>Nagaland</fullName>
                </value>
                <value>
                    <fullName>Odisha</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Sikkim</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Tripura</fullName>
                </value>
                <value>
                    <fullName>Uttarakhand</fullName>
                </value>
                <value>
                    <fullName>Uttar Pradesh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B.Arch</fullName>
                </value>
                <value>
                    <fullName>B.Com</fullName>
                </value>
                <value>
                    <fullName>B.Tech</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BCA</fullName>
                </value>
                <value>
                    <fullName>M.Tech</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email_Id__c</fullName>
        <label>Student Email Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back2__c</fullName>
        <label>Subjects in which Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Applied Mechanics Lab</fullName>
                </value>
                <value>
                    <fullName>Artificial Intelligence.</fullName>
                </value>
                <value>
                    <fullName>Business Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Economics</fullName>
                </value>
                <value>
                    <fullName>Business Law</fullName>
                </value>
                <value>
                    <fullName>Business Organisation and Principles of Management</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Computer Architecture.</fullName>
                </value>
                <value>
                    <fullName>Computer Forensics.</fullName>
                </value>
                <value>
                    <fullName>Computer Networks.</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolution</fullName>
                </value>
                <value>
                    <fullName>Data Structure and Algorithms.</fullName>
                </value>
                <value>
                    <fullName>Dynamics of Machines</fullName>
                </value>
                <value>
                    <fullName>Electrohydraulic Control Systems</fullName>
                </value>
                <value>
                    <fullName>Engineering Drawing</fullName>
                </value>
                <value>
                    <fullName>Engineering Mechanics</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
                <value>
                    <fullName>Essentials of Marketing</fullName>
                </value>
                <value>
                    <fullName>Etiquette and Conversational Skills</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Fluid Machinery</fullName>
                </value>
                <value>
                    <fullName>Fluid Mechanics</fullName>
                </value>
                <value>
                    <fullName>Heat Transfer</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>Industrial Management</fullName>
                </value>
                <value>
                    <fullName>International Business Management</fullName>
                </value>
                <value>
                    <fullName>Kinematic Analysis and Synthesis</fullName>
                </value>
                <value>
                    <fullName>Machine Design</fullName>
                </value>
                <value>
                    <fullName>Machine Drawing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back3__c</fullName>
        <label>Subjects in which Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Applied Mechanics Lab</fullName>
                </value>
                <value>
                    <fullName>Artificial Intelligence.</fullName>
                </value>
                <value>
                    <fullName>Business Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Economics</fullName>
                </value>
                <value>
                    <fullName>Business Law</fullName>
                </value>
                <value>
                    <fullName>Business Organisation and Principles of Management</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Computer Architecture.</fullName>
                </value>
                <value>
                    <fullName>Computer Forensics.</fullName>
                </value>
                <value>
                    <fullName>Computer Networks.</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolution</fullName>
                </value>
                <value>
                    <fullName>Data Structure and Algorithms.</fullName>
                </value>
                <value>
                    <fullName>Dynamics of Machines</fullName>
                </value>
                <value>
                    <fullName>Electrohydraulic Control Systems</fullName>
                </value>
                <value>
                    <fullName>Engineering Drawing</fullName>
                </value>
                <value>
                    <fullName>Engineering Mechanics</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
                <value>
                    <fullName>Essentials of Marketing</fullName>
                </value>
                <value>
                    <fullName>Etiquette and Conversational Skills</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Fluid Machinery</fullName>
                </value>
                <value>
                    <fullName>Fluid Mechanics</fullName>
                </value>
                <value>
                    <fullName>Heat Transfer</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>Industrial Management</fullName>
                </value>
                <value>
                    <fullName>International Business Management</fullName>
                </value>
                <value>
                    <fullName>Kinematic Analysis and Synthesis</fullName>
                </value>
                <value>
                    <fullName>Machine Design</fullName>
                </value>
                <value>
                    <fullName>Machine Drawing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back4__c</fullName>
        <label>Subjects in which Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Applied Mechanics Lab</fullName>
                </value>
                <value>
                    <fullName>Artificial Intelligence.</fullName>
                </value>
                <value>
                    <fullName>Business Analytics</fullName>
                </value>
                <value>
                    <fullName>Business Economics</fullName>
                </value>
                <value>
                    <fullName>Business Law</fullName>
                </value>
                <value>
                    <fullName>Business Organisation and Principles of Management</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Computer Architecture.</fullName>
                </value>
                <value>
                    <fullName>Computer Forensics.</fullName>
                </value>
                <value>
                    <fullName>Computer Networks.</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolution</fullName>
                </value>
                <value>
                    <fullName>Data Structure and Algorithms.</fullName>
                </value>
                <value>
                    <fullName>Dynamics of Machines</fullName>
                </value>
                <value>
                    <fullName>Electrohydraulic Control Systems</fullName>
                </value>
                <value>
                    <fullName>Engineering Drawing</fullName>
                </value>
                <value>
                    <fullName>Engineering Mechanics</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
                <value>
                    <fullName>Essentials of Marketing</fullName>
                </value>
                <value>
                    <fullName>Etiquette and Conversational Skills</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Fluid Machinery</fullName>
                </value>
                <value>
                    <fullName>Fluid Mechanics</fullName>
                </value>
                <value>
                    <fullName>Heat Transfer</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>Industrial Management</fullName>
                </value>
                <value>
                    <fullName>International Business Management</fullName>
                </value>
                <value>
                    <fullName>Kinematic Analysis and Synthesis</fullName>
                </value>
                <value>
                    <fullName>Machine Design</fullName>
                </value>
                <value>
                    <fullName>Machine Drawing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Percentage__c</fullName>
        <label>3rd Sem Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>